log
Thu Apr 16 07:58:56 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
1f52835
Thu Apr 16 08:13:27 PM UTC 2026: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:78:28: error: expected ‘;’ before ‘}’ token
   78 |                 posicion+=1
      |                            ^
      |                            ;
   79 |             }
      |             ~               
28b13bb
Thu Apr 16 08:13:38 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|7
total_score: 0/60
86ae79b
Thu Apr 16 08:17:51 PM UTC 2026: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|6
total_score: 10/60
f0f75e2
Thu Apr 16 08:24:19 PM UTC 2026: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:10: error: unused variable ‘posicion2’ [-Werror=unused-variable]
   63 |     long posicion2 = posicion;
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
590e8c8
Thu Apr 16 08:24:31 PM UTC 2026: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|6
total_score: 10/60
594d0b8
Sun Apr 19 01:05:26 AM UTC 2026: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
2d116d5
Sun Apr 19 01:06:40 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
e33f2de
Sun Apr 19 01:07:06 AM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
7e6a60f
